fix alignment of photo grid

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -295,6 +295,7 @@ time {
 }
 
 .photogrid {
+    align-items: center;
     display: flex;
     flex-wrap: wrap;
     flex-grow: 1;
